--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
+    "swiper": "^10.1.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
