--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.1.0",
     "react-icons": "^4.10.1",
+    "react-lazy-load-image-component": "^1.6.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
     "swiper": "^10.1.0",
