--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.4",
     "translate-google": "^1.5.0",
     "xlsx": "^0.18.5"
