--- a/server/package.json
+++ b/server/package.json
@@ -17,11 +17,13 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.4",
+    "swagger-ui-express": "^5.0.0",
     "translate-google": "^1.5.0",
     "xlsx": "^0.18.5"
   }
