--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "i18next": "^23.4.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-flow-renderer": "^10.3.17",
     "react-i18next": "^13.1.0",
     "react-icons": "^4.10.1",
     "react-lazy-load-image-component": "^1.6.0",
