--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-flow-renderer": "^10.3.17",
     "react-i18next": "^13.1.0",
     "react-icons": "^4.10.1",
@@ -26,6 +27,7 @@
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
     "swiper": "^10.1.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.2.0"
   },
   "devDependencies": {
