--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-lazy-load-image-component": "^1.6.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.14.2",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "swiper": "^10.1.0",
     "xlsx": "^0.18.5",
