--- a/client/package.json
+++ b/client/package.json
@@ -18,17 +18,13 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-flow-renderer": "^10.3.17",
     "react-i18next": "^13.1.0",
     "react-icons": "^4.10.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.14.2",
-    "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "swiper": "^10.1.0",
-    "xlsx": "^0.18.5",
     "yup": "^1.2.0"
   },
   "devDependencies": {
@@ -42,6 +38,8 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   }
 }
