--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "i18next": "^23.4.4",
+    "litepicker": "^2.0.12",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
