--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.10.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-modal": "^3.16.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
     "swiper": "^10.1.0",
